--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ if (keystorePropertiesFile.exists()) {
 
 
 android {
-    compileSdkVersion 34
+    compileSdk 35
 
     compileOptions {
         coreLibraryDesugaringEnabled true
@@ -59,6 +59,11 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
+        
+        // Enable 16KB page size testing
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
+        }
     }
 
    signingConfigs {
@@ -72,6 +77,12 @@ android {
    buildTypes {
        release {
            signingConfig signingConfigs.release
+       }
+   }
+
+   packagingOptions {
+       jniLibs {
+           useLegacyPackaging = false
        }
    }
 
